# gtsam-splatfactors

./: README.md  pyproject.toml
examples/: eval_kitti.py  eval_tum.py  make_demo_video.py  synthetic_demo.py
gsplat_slam/: __init__.py  analytical_jacobian.py  cli.py  densification.py  depth_init.py  exporters.py  factor.py  imu_factor.py  keyframe_manager.py  kitti_loader.py  loop_detector.py  map.py  mapper.py  pose_utils.py  renderer.py  slam.py  tum_loader.py  video_runner.py  visualization.py
tests/: test_analytical_jacobian.py  test_factor.py  test_pose_utils.py
